# fetch_market_data

./: .gitignore  AGENTS.md  METRICS_TODO.md  README.en.md  README.md  SCREEN_PLAN.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/fetch-market-data/: SKILL.md
skills/fetch-market-data/examples/: analysis-patterns.sh
skills/fetch-market-data/references/: metrics-reference.md
skills/screen-market-data/: SKILL.md
skills/screen-market-data/examples/: screening-patterns.sh
skills/screen-market-data/references/: options-reference.md
src/fetch_market_data/: cli.py  fetcher.py  screen_cli.py  screener.py
tests/: test_cli.py  test_fetcher.py  test_new_metrics.py  test_screen_cli.py  test_screener.py
